<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/background"
            android:contentDescription="Image"
            android:scaleType="centerCrop"
            android:src="@drawable/fork"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/food"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@id/login_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/tv_theme"
            tools:layout_editor_absoluteX="-200dp" />

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_1sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_theme">


            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/email_back"
                android:src="@drawable/account" />
        </LinearLayout>


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:autofillHints="emailAddress"
            android:textAlignment="center"
            android:textSize="@dimen/_11sdp"
            android:backgroundTint="@color/transparent"
            android:background="@null"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_theme" />

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_1sdp"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/email_back"
                android:src="@drawable/key" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:autofillHints="Password"
            android:backgroundTint="@color/transparent"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/_12sdp"
            android:maxLength="@integer/email"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/red"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
           />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <TextView
                android:id="@+id/link1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/btnLogin"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <TextView
                android:id="@+id/tV_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/yellow"
                app:layout_constraintLeft_toRightOf="@id/link1"
                app:layout_constraintRight_toRightOf="@id/btnLogin"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>